# SoudanDB

./: __init__.py  example_database_usage.py
SensitivityCalculation/: Makefile  Makefile.in  README  calc_objects.py  configure  configure.ac  resolving_power.py  root.m4  temp.root  wimp_model.py
SensitivityCalculation/WIMPPdfs/: MGMWimpDiffRateEscapeVelPdf.hh  MGMWimpHelmFFSquared.cc  MGMWimpHelmFFSquared.hh  MGMWimpTimeFunction.cc  MGMWimpTimeFunction.hh
SensitivityCalculation/buildTools/: BasicMakefile  BasicROOTMakefile  config.mk.in
SensitivityCalculation/pyWIMP/: __init__.py  calc_objects.py  job_engine.py  utilities.py  wimp_model.py
SensitivityCalculation/pyWIMP/Calculation/: BaseCalculation.py  DataCalculation.py  ExclusionCalculation.py  OscillationSensitivityCalculation.py  SensitivityCalculation.py  calc_objects.py
SensitivityCalculation/pyWIMP/DMModels/: background_model.py  base_model.py  flat_model.py  gamma_line_model.py  low_energy_background.py  oscillation_model.py  wimp_model.py
SensitivityCalculation/pyWIMP/WIMPPdfs/: LinkDef.h  MGMErfcFunction.cc  MGMErfcFunction.hh  MGMPiecewiseFunction.cc  MGMPiecewiseFunction.hh  MGMPolyPlusExponential.cc  MGMPolyPlusExponential.hh  MGMVWimpFormFactor.cc  MGMVWimpFormFactor.hh  MGMWimpDiffRateBasicPdf.cc  MGMWimpDiffRateBasicPdf.hh  MGMWimpDiffRateEscapeVelPdf.cc  MGMWimpDiffRatePdf.cc  MGMWimpDiffRatePdf.hh  Makefile  __init__.py
SensitivityCalculation/pyWIMP/utilities/: utilities.py
SensitivityCalculation/test_scripts/: make_WIMP_model_plot.py  test.py  test_esc_vel.py  test_ff.py  test_model.py  test_norm.py  test_quenching.py
SensitivityCalculation/utilities/: __init__.py  initialize.py  utilities.py
SoudanDB/: generate_all_cuts_on_database.py  update_calculations_on_database.py  update_database.py
SoudanDB/analysis/: analyze_pulser_data.py
SoudanDB/cuts/: database_cuts.py  generate_all_cuts_on_database.py  generate_leave_out_run_cuts.py  insert_cut.py  insert_cuts.py
SoudanDB/databases/bege_gretina/: db.py
SoudanDB/databases/bege_jc/: db.py
SoudanDB/databases/ppctwo/: __init__.py  db.py
SoudanDB/management/: __init__.py  couchdb_extensions.py  soudan_database.py
SoudanDB/update/: update_calculations_on_database.py  update_number_of_entries_in_root_file.py  update_pulser_data.py  update_run_time.py  update_start_of_run_time.py
SoudanDB/utilities/: utilities.py
SoudanDB/views/: database_views.py  insert_view.py  view_all_accepted_runs.py  view_all_rejected_runs.py  view_database_updated_docs.py
databases/bege_gretina/: __init__.py  db.py
databases/bege_gretina/update/: update_run_files.py
databases/bege_gretina/views/: view_all_accepted_runs_with_attenuator.py  view_files_of_accepted_runs.py  view_starttime_all_accepted_runs.py  view_virgin_runstart_time.py
databases/bege_jc/: __init__.py  db.py
databases/bege_jc/update/: update_pulser_no_pulser_sets.py  update_run_files.py
databases/bege_jc/views/: __init__.py  view_LN_fills_with_attachment.py  view_all_accepted_runs.py  view_all_rejected_runs.py  view_annual_modulation.py  view_annual_modulation_analysis_two.py  view_events_in_run_file.py  view_first_efficiency_runs.py  view_number_of_entries_in_root_file.py  view_old_runs.py  view_scanning_pulser_runs.py  view_virgin_docs.py  view_virgin_number_of_entries_in_root_file.py  view_virgin_output_file.py  view_virgin_pulser_data.py
databases/ppctwo/: db.py
management/: __init__.py  couchdb_extensions.py  soudan_database.py  update_schema.py
update/: update_calculations_on_database.py
views/: insert_views.py
(+73 files in other folders)
